remove z-index of popup-window to solve node height problem

--- a/stylesheets/helper.css
+++ b/stylesheets/helper.css
@@ -1,9 +1,9 @@
 /* YW: this css defines style for helper div in base.html
 helper div is used to place tspan and measure textwidth*/
-.helper {
+.text-helper {
     position: absolute;
     visibility: hidden;
-    z-index: -500;
+    z-index: -999999;
     top: 50%;
     left: 50%;
     background-color: transparent;
